# zytlebot_ros2

./: README.md
src/autonomous/: CMakeLists.txt  autorace.json  package.xml
src/autonomous/include/autonomous/: autonomous_component.hpp
src/autonomous/src/: autonomous.cpp  autonomous_component.cpp  autonomous_component.cpp.rej
src/autonomous_composition/: CMakeLists.txt  package.xml
src/autonomous_composition/src/: autonomous_composition.cpp
src/autonomous_executor/: CMakeLists.txt  package.xml
src/autonomous_executor/src/: autonomous_executor.cpp
src/pcam/: CMakeLists.txt  package.xml
src/pcam/include/pcam/: pcam_component.hpp
src/pcam/src/: pcam.cpp  pcam_component.cpp
src/red_detect/: CMakeLists.txt  package.xml  weights.json
src/red_detect/include/randam_forest/: rf_feature.h
src/red_detect/include/red_detect/: red_detect_component.hpp
src/red_detect/src/: red_detect.cpp  red_detect_component.cpp
src/webcam/: CMakeLists.txt  package.xml
src/webcam/include/webcam/: webcam_component.hpp
src/webcam/src/: webcam.cpp  webcam_component.cpp
src/yolo/: CMakeLists.txt  package.xml
src/yolo/include/driver/: dpu.ko
src/yolo/include/yolo/: utils.h  yolo_component.hpp
src/yolo/src/: yolo.cpp  yolo_component.cpp
