<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>pcam</name>
    <version>1.0.0</version>
    <description>ZytleBot pcam for ROS2</description>
    <maintainer email="tamusou@gmail.com">So Tamura</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rclcpp</build_depend>
    <build_depend>rclcpp_components</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>class_loader</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>ffmpeg</build_depend>

    <exec_depend>rclcpp</exec_depend>
    <exec_depend>class_loader</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>roscpp_components</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>std_srvs</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>ffmpeg</exec_depend>
    <exec_depend>v4l-utils</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>